@@ -5,6 +5,8 @@
 	- base64.formatString() didn't work if lineLength wasn't 64.
 	  (David Blacka)
 	- Add support for the DNSSEC OK extended flag (David Blacka)
+	- Allow the caller of a Resolver to add an OPT record to a query.
+	  (original patch from David Blacka).
 
 5/23/2001
 	- Automatically determining name servers didn't work on Windows 2000.
